[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
crossterm = "0.23"
eframe = "0.18.0"
egui_extras = { version = "0.18.0", features = ["image"] }
image = { version = "0.24.2", features = ["png"] }

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"